# cram-archiver

./: CHANGELOG.rst  README.md  README.rst  pyproject.toml  tox.ini
.github/: release_checklist.md
.github/workflows/: ci.yml
src/cram_archiver/: __init__.py  __main__.py  references.py
src/cram_converter/: __init__.py
tests/: test_cram_archiver.py
tests/data/: GM24385_1.bam  empty.bam  empty.cram
