[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name="cram-converter"
description="Samtools wrapping service for automated CRAM conversion."
readme = "README.rst"
requires-python = ">=3.10"

authors = [
    {name = "Leiden University Medical Center", email = "sasc@lumc.nl"}
]
dynamic = ["version"]

[project.scripts]
cram-converter = "cram_converter.__main__:main"
cram-converter-service = "cram_converter_service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
[tool.setuptools_scm]

