[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name="cram-archiver"
description="Samtools wrapper for archiving BAM files safely to CRAM"
readme = "README.rst"
requires-python = ">=3.10"

authors = [
    {name = "Leiden University Medical Center", email = "sasc@lumc.nl"}
]
dynamic = ["version"]

[project.scripts]
cram-archiver = "cram_archiver.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
[tool.setuptools_scm]

